fix: metodo de pagamento container overflowing 2

--- a/src/app/components/transactions/transactions.scss
+++ b/src/app/components/transactions/transactions.scss
@@ -25,7 +25,7 @@
 .filters {
   margin-bottom: var(--space-400);
   display: grid;
-  grid-template-columns: 3.5fr 3.5fr repeat(2, 3fr) 1fr;
+  grid-template-columns: 4fr 4fr repeat(2, 3fr) 1fr;
   align-items: flex-end;
   gap: var(--space-400);
 }
